syntax = "proto3";

package auth;

service AuthService {
    rpc VerifyToken(VerifyTokenRequest) returns (DataVerifyResponse) {}
    rpc Login(LoginRequest) returns (DataLoginResponse) {}
    rpc Register(RegisterRequest) returns (DataRegisterResponse) {}
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string accessToken = 1;
    string expires = 2;
    string refreshToken = 3;
    string message = 4;
}

message RegisterRequest {
    string full_name = 1;
    string email = 2;
    string password = 3;
}

message RegisterResponse {
    string accessToken = 1;
    string expires = 2;
    string refreshToken = 3;
}

message VerifyTokenRequest {
    string accessToken = 1;
}

message VerifyTokenResponse {
    string id = 1;
}

message DataLoginResponse {
    bool success = 1;
    LoginResponse data = 2;
    string message  = 3;
}

message DataRegisterResponse {
    bool success = 1;
    RegisterResponse data = 2;
    string message  = 3;
}

message DataVerifyResponse {
    bool success = 1;
    VerifyTokenResponse data = 2;
    string message = 3;
}