syntax = "proto3";

package user;

service UserService {
    rpc Create(UserRequest) returns (DataResponse) {}
    rpc FindByEmail(UserEmailRequest) returns (DataResponse) {}
    rpc FindById(UserIdRequest) returns (DataResponse) {}
}

message UserIdRequest {
    int32 id = 1;
}

message UserEmailRequest {
    string email = 1;
}

message UserRequest {
    int32 id = 1;
    string full_name = 2;
    string email = 3;
    string password = 4;
}

message UserResponse {
    int32 id = 1;
    string full_name = 2;
    string email = 3;
    string password = 4;
    string user_type = 5;
}

message DataResponse {
    bool success = 1;
    UserResponse data = 2;
    string message = 3;
}
